.opsera-cwa-test-1/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cwa-test-1
  labels:
    app: cwa-test-1
    tenant: opsera
spec:
  selector:
    app: cwa-test-1
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
