.opsera-cwa-test-1/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cwa-test-1
  labels:
    app: cwa-test-1
    tenant: opsera
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: cwa-test-1-dev.agent.opsera.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cwa-test-1
                port:
                  number: 80
